Day3/ingress/hello-pod.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tektutor
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello
  name: hello-pod
  namespace:  tektutor 
spec:
  containers:
  - image: tektutor/hello-ms:2.0
    name: hello-ms
...
