Day3/ingress/hello-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello
  type: ClusterIP
