Day3/ingress/hello-lb-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello
  namespace: default
spec:
  ports:
  - nodePort: 31500
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello
  type: LoadBalancer
