Day3/ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind:  Ingress
metadata:
  name: tektutor-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: devops.tektutor.org
      http:
        paths:
          - pathType: Prefix
            path: "/hello"
            backend:
              serviceName: hello
              servicePort: 80

          - pathType: Prefix
            path: "/nginx"
            backend:
              serviceName: nginx
              servicePort: 80
